@startuml
package DAO {
    class DentistaDAO {
        - instance: DentistaDAO
        - tratamientoDAO: TratamientoDAO
        + getInstance(): DentistaDAO
        + findAll(): List<Object>
        + findAllEager(): List<Object>
        + findDentistaByTratamiento(idTratamiento: int): Dentista
        + findByNameEager(nombre: String): Dentista
        + insert(dentista: Dentista): void
        + update(idDentista: int, dentista: Dentista): void
        + deleteById(idDentista: int): void
    }

    class PacienteDAO {
        - instance: PacienteDAO
        - tratamientoDAO: TratamientoDAO
        - tratamientoPacienteDAO: TratamientoPacienteDAO
        + getInstance(): PacienteDAO
        + findAll(): List<Object>
        + findAllEager(): List<Object>
        + findNameById(idPaciente: int): String
        + findByIdEager(idPaciente: int): Paciente
        + findByNameEager(nombre: String): Paciente
        + insert(paciente: Paciente): void
        + update(idPaciente: int, paciente: Paciente): void
        + deleteById(idPaciente: int): void
    }

    class TratamientoDAO {
        - instance: TratamientoDAO
        - dentistaDAO: DentistaDAO
        + getInstance(): TratamientoDAO
        + findAll(): List<Object>
        + findAllEager(): List<Object>
        + findByDescripcionEager(descripcion: String): Tratamiento
        + findDescripcionById(idTratamiento: int): String
        + findTratamientosByDentista(idDentista: int): List<Tratamiento>
        + insert(tratamiento: Tratamiento): void
        + update(idTratamiento: int, tratamiento: Tratamiento): void
        + deleteById(idTratamiento: int): void
    }

    class TratamientoPacienteDAO {
        - instance: TratamientoPacienteDAO
        + getInstance(): TratamientoPacienteDAO
        + findAll(): List<TratamientoPaciente>
        + findTratamientosByPaciente(idPaciente: int): List<TratamientoPaciente>
        + insert(tratamientoPaciente: TratamientoPaciente): void
        + update(tratamientoPaciente: TratamientoPaciente): void
        + delete(idPaciente: int, idTratamiento: int, fechaTratamiento: Date): void
    }
}

DAO.DentistaDAO --> DAO.TratamientoDAO
DAO.PacienteDAO --> DAO.TratamientoDAO
DAO.PacienteDAO --> DAO.TratamientoPacienteDAO
DAO.TratamientoDAO --> DAO.DentistaDAO
@enduml